some tiny modification

--- a/vueTmall/index.html
+++ b/vueTmall/index.html
@@ -11,6 +11,7 @@
       a:hover{
       text-decoration: none;
       color: #C40000;
+      cursor: pointer;
       }
       button:hover,button:active{
       cursor: pointer;
